--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.4.4",
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
