--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "core-js": "^3.8.3",
+    "@mdi/font": "7.1.96",
+    "core-js": "^3.28.0",
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
-    "vue": "^3.2.13",
-    "vuetify": "^3.0.4",
-    "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "vue": "^3.2.47",
+    "vuetify": "^3.1.5",
+    "vuex": "^4.1.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-vuex": "^5.0.4",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.52.1",
-    "sass-loader": "^13.0.0",
-    "vue-cli-plugin-vuetify": "~2.5.1",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.1"
   },
   "eslintConfig": {
     "root": true,
